--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,11 @@
 [tox]
-envlist = py26, py27, py34, pypy
+envlist = py27, py34, pypy
 
 [testenv]
 commands =
     nosetests
 deps =
     nose
-
-[testenv:py26]
-deps =
-    {[testenv]deps}
-    unittest2
-    argparse
 
 [testenv:py27]
 deps =
