Add flake8 checks and more python versions on Travis/Tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,42 @@
+# Tox (http://tox.testrun.org/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
 [tox]
-envlist = py27, py34, pypy
+envlist = py27-test, py27-flake8, docs
+
+# The exhaustive list of environments is:
+# envlist = py{27,33,34,35}-{test,cov}, py{27,33}-flake8, docs
+
+[_test]
+deps =
+    coverage
+    nose
+    nose-show-skipped
+    pyyaml
+
+
+[_flake8]
+deps =
+    flake8
+    flake8-future-import
+    pep8-naming
+files = example confuse.py test setup.py docs
 
 [testenv]
+passenv =
+    NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
+deps =
+    {test,cov}: {[_test]deps}
+    py{27,33}-flake8: {[_flake8]deps}
 commands =
-    nosetests
-deps =
-    nose
+    cov: nosetests --with-coverage {posargs}
+    test: nosetests {posargs}
+    py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
+    py33-flake8: flake8 --min-version 3.3 {posargs} {[_flake8]files}
 
-[testenv:py27]
-deps =
-    {[testenv]deps}
-    argparse
+[testenv:docs]
+basepython = python2.7
+deps = sphinx
+commands = sphinx-build -W -q -b html docs {envtmpdir}/html {posargs}
