--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{27,33,34,35}-{test,cov}, py{27,33}-flake8, docs
+envlist = py{27,35}-test, py27-flake8, docs
+
+# The full environment list is:
+# envlist = py{27,33,34,35}-{test,cov}, py{27,33}-flake8, docs
 
 [_test]
 deps =
