Travis config: run tox directly
The hook to import tox and invoke its command-line main function broke
with a tox upgrade:
https://travis-ci.org/sampsyo/confuse/jobs/344252353

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,11 @@ matrix:
         - python: 2.7
           env: {TOXENV: docs}
 
-# To install dependencies, tell tox to do everything but actually running the
-# test.
+# Install tox for testing.
 install:
-    - travis_retry python setup.py test -a "--notest"
+    - travis_retry pip install tox
 
-script: python setup.py test
+script: tox
 
 # Report coverage to codecov.io.
 before_install:
