--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,16 @@ matrix:
           env: {TOXENV: py34-cov, COVERAGE: 1}
         - python: 3.5
           env: {TOXENV: py35-test}
+        - python: 3.6
+          env: {TOXENV: py36-test}
         - python: pypy
           env: {TOXENV: pypy-test}
         - python: 2.7
           env: {TOXENV: py27-flake8}
         - python: 3.4
           env: {TOXENV: py34-flake8}
+        - python: 3.6
+          env: {TOXENV: py36-flake8}
         - python: 2.7
           env: {TOXENV: docs}
 
