--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{27,34,35}-test, py27-flake8, docs
+envlist = py{27,34,35,36}-test, py27-flake8, docs
 
 # The full environment list is:
 # envlist = py{27,34,35}-{test,cov}, py{27,34}-flake8, docs
@@ -29,12 +29,13 @@ passenv =
     NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
     {test,cov}: {[_test]deps}
-    py{27,34}-flake8: {[_flake8]deps}
+    py{27,34,36}-flake8: {[_flake8]deps}
 commands =
     cov: nosetests --with-coverage {posargs}
     test: nosetests {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
+    py36-flake8: flake8 --min-version 3.6 {posargs} {[_flake8]files}
 
 [testenv:docs]
 basepython = python2.7
