Update whitespace for latest pycodestyle
See:
https://github.com/PyCQA/pycodestyle/issues/498

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,4 +17,6 @@ min-version=2.7
 # - FI53: `__future__` import "print_function" present
 # - FI14: `__future__` import "unicode_literals" missing
 # - FI15: `__future__` import "generator_stop" missing
-ignore=C901,E241,E221,E731,FI50,FI51,FI12,FI53,FI14,FI15
+# pycodestyle warnings ignored:
+# - W503: line breaks before binary operators
+ignore=C901,E241,E221,E731,FI50,FI51,FI12,FI53,FI14,FI15,W503
