--- a/tox.ini
+++ b/tox.ini
@@ -33,12 +33,12 @@ deps =
     py{27,34,36}-flake8: {[_flake8]deps}
 commands =
     cov: nosetests --with-coverage {posargs}
-    test: nosetests {posargs}
+    test: nosetests -s {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
     py36-flake8: flake8 --min-version 3.6 {posargs} {[_flake8]files}
 
-[testenv:docs]
-basepython = python2.7
-deps = sphinx
-commands = sphinx-build -W -q -b html docs {envtmpdir}/html {posargs}
+# [testenv:docs]
+# basepython = python2.7
+# deps = sphinx
+# commands = sphinx-build -W -q -b html docs {envtmpdir}/html {posargs}
