--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
     flake8
     flake8-future-import
     pep8-naming
-files = example confuse.py test setup.py docs
+files = example confuse test setup.py docs
 
 [testenv]
 passenv =
