Configure tox for pyproject.toml setup

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,10 @@
 
 [tox]
 envlist = py{27,34,35,36,37,38}-test, py27-flake8, docs
+isolated_build = True
+
+[tox:.package]
+basepython = python3
 
 [_test]
 deps =
@@ -20,7 +24,7 @@ deps =
     flake8
     flake8-future-import
     pep8-naming
-files = example confuse test setup.py docs
+files = example confuse test docs
 
 [testenv]
 passenv =
