--- a/tox.ini
+++ b/tox.ini
@@ -41,5 +41,7 @@ commands =
 
 [testenv:docs]
 basepython = python2.7
-deps = sphinx
+deps = 
+    sphinx
+    sphinx-rtd-theme
 commands = sphinx-build -W -q -b html docs {envtmpdir}/html {posargs}
