--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,12 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                tox-env: [py27-test, py35-test, py36-test,
+                tox-env: [py36-test,
                           py37-test, py38-test, pypy-test]
                 os: [ubuntu-latest, windows-latest]
 
                 # Only test on a couple of versions on Windows.
                 exclude:
-                    - os: windows-latest
-                      tox-env: py35-test
                     - os: windows-latest
                       tox-env: py36-test
                     - os: windows-latest
@@ -31,10 +29,6 @@ jobs:
 
                 # Python interpreter versions. :/
                 include:
-                    - tox-env: py27-test
-                      python: 2.7
-                    - tox-env: py35-test
-                      python: 3.5
                     - tox-env: py36-test
                       python: 3.6
                     - tox-env: py37-test
