--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,23 +11,13 @@ requires = [
     "pyyaml"
 ]
 description-file = "README.rst"
-requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4"
+requires-python = ">=3.6, <4"
 classifiers = [
     'Intended Audience :: Developers',
     'License :: OSI Approved :: MIT License',
-    'Programming Language :: Python :: 2',
-    'Programming Language :: Python :: 2.7',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.4',
-    'Programming Language :: Python :: 3.5',
     'Programming Language :: Python :: 3.6',
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
-]
-
-[tool.flit.metadata.requires-extra]
-test = [
-    "pathlib; python_version == '2.7'"
 ]
