Switch from nose to nose2

--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,7 @@ basepython = python3
 
 [_test]
 deps =
-    coverage
-    nose
-    nose-show-skipped
+    nose2[coverage_plugin]
     pyyaml
     pathlib
 
@@ -27,14 +25,12 @@ deps =
 files = example confuse test docs
 
 [testenv]
-passenv =
-    NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
     {test,cov}: {[_test]deps}
     py{36,37,38}-flake8: {[_flake8]deps}
 commands =
-    cov: nosetests --with-coverage {posargs}
-    test: nosetests {posargs}
+    cov: nose2 --with-coverage {posargs}
+    test: nose2 {posargs}
     py36-flake8: flake8 --min-version 3.6 {posargs} {[_flake8]files}
 
 [testenv:docs]
