--- a/setup.cfg
+++ b/setup.cfg
@@ -10,13 +10,6 @@ min-version=3.6
 # - E221: multiple spaces before operator (used to align visually)
 # - E731: do not assign a lambda expression, use a def
 # - C901: function/method complexity
-# `flake8-future-import` errors we ignore:
-# - FI50: `__future__` import "division" present
-# - FI51: `__future__` import "absolute_import" present
-# - FI12: `__future__` import "with_statement" missing
-# - FI53: `__future__` import "print_function" present
-# - FI14: `__future__` import "unicode_literals" missing
-# - FI15: `__future__` import "generator_stop" missing
 # pycodestyle warnings ignored:
 # - W503: line breaks before binary operators
-ignore=C901,E241,E221,E731,FI50,FI51,FI12,FI53,FI14,FI15,W503
+ignore=C901,E241,E221,E731,W503
