--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
     "pyyaml"
 ]
 description-file = "README.rst"
-requires-python = ">=3.6, <4"
+requires-python = ">=3.6"
 classifiers = [
     'Intended Audience :: Developers',
     'License :: OSI Approved :: MIT License',
