Different debugger action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,10 @@ jobs:
             python-version: ${{ matrix.python-version }}
         - name: Install Tox
           run: pip install tox
-        - uses: lhotari/action-upterm@v1
+        - uses: luchihoratiu/debug-via-ssh@main
+          with:
+            NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+            SSH_PASS: ${{ secrets.SSH_PASS }}
         - name: Tox
           run: tox -e py-test
 
