--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
       runs-on: ${{ matrix.os }}
       strategy:
         matrix:
-          python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
-          os: [ubuntu-latest, windows-latest]
+          python-version: ['3.12']
+          os: [windows-latest]
 
       steps:
         - uses: actions/checkout@v3
