Update test setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,18 @@
-[nosetests]
-verbosity=1
-logging-clear-handlers=1
-eval-attr="!=slow"
+[coverage:run]
+data_file = .reports/coverage/data
+branch = true
+relative_files = true
 
-[flake8]
-min-version=3.9
-# Default pyflakes errors we ignore:
-# - E241: missing whitespace after ',' (used to align visually)
-# - E221: multiple spaces before operator (used to align visually)
-# - E731: do not assign a lambda expression, use a def
-# - C901: function/method complexity
-# pycodestyle warnings ignored:
-# - W503: line breaks before binary operators
-ignore=C901,E241,E221,E731,W503
+[coverage:report]
+precision = 2
+skip_empty = true
+show_missing = true
+exclude_also =
+    @atexit.register
+    if TYPE_CHECKING
+    if typing.TYPE_CHECKING
+    raise AssertionError
+    raise NotImplementedError
+
+[coverage:html]
+show_contexts = true
