Configure mypy with strict settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,8 @@ show_contexts = true
 
 [mypy]
 allow_any_generics = false
+allow_subclassing_any = true
+allow_untyped_calls = true
+# FIXME: Would be better to actually type the libraries (if under our control),
+# or write our own stubs. For now, silence errors
+strict = true
